# everdict

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/rules/: agent.md  api-layer.md  auth.md  backends.md  ci.md  core-contracts.md  datasets.md  db.md  drivers.md  graders.md  harnesses.md  infra-deploy.md  job-runner.md  mcp.md  orchestrator.md  registry.md  suite.md  testing.md  topology.md  trace.md  typescript.md  web.md  workspace-integrations.md
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: browser-image.yml  ci.yml  cli-release.yml  desktop-release.yml  images.yml
apps/agent/: .env.example  Dockerfile  package.json
clients/python/: README.md  pyproject.toml
clients/python/everdict/: __init__.py  client.py
clients/python/tests/: test_client.py
datasets/: webvoyager-mini.jsonl
docs/: README.md  api.md  auth.md  command-harness.md  connections.md  datasets.md  dev.md  execution-backends.md  judges.md  mcp.md  models.md  orchestration.md  registry.md  runtimes.md  sandbox-auth.md  scorecards.md  secrets.md  service-harness.md  suites.md  tenancy.md  usage-metering.md  web.md
plugin/: .mcp.json  README.md
scripts/: check-agent-cone.mjs  check-job-runner-cone.mjs  check-web-imports.mjs  ci-local.mjs
(+1834 files in other folders)
