[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "everdict"
version = "0.0.0"
description = "The one-call Everdict client — reproduce env + N trials + score → a verdict, in one call."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []

[tool.setuptools.packages.find]
include = ["everdict*"]
